--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
           <h1>I'm Sukhbir Singh.</h1>
 
           <p class="intro-position">
-            <span>Software Developer</span>
             <span>Full Stack Developer</span>
           </p>
 
@@ -102,7 +101,7 @@
 
           <img src="images/profile-pic.jpg" alt="Profile Picture">
 
-          <p class="lead"> "I am just a guy who loves to code. Intrigued by video Games, I became resolute to explore the hidden development and concepts behind these games right from my school days. So, I started learning the C language during high school. After that, I learned HTML, CSS, and Javascript. Upon learning these languages, my curiosity for this field even heightened, motivating me to opt for Computer Programming as my major at my College. 
+          <p class="lead"> "Since my childhood, I had a great affection for video games. At that time I only cared about playing, but as I grew up my curiosity to explore how they are developed increased. So, I started searching on the internet and came to know that they all start from programming languages. Then I started learning the C language during high school. After that, I learned HTML, CSS, and Javascript. Upon learning these languages, my curiosity for this field even heightened, motivating me to opt for Computer Programming as my major at my College. 
             "
           </p>
         </div>
@@ -128,15 +127,11 @@
           </li>
           <li>
             <strong>Job:</strong>
-            <span>Freelancer</span>
-          </li>
-          <li>
-            <strong>Website:</strong>
-            <span>www.dead-developer.com</span>
+            <span>Mobile Developer</span>
           </li>
           <li>
             <strong>Email:</strong>
-            <span>sukhbirbrar@dead-developer.com</span>
+            <span>sukhbirbrar83@gmail.com</span>
           </li>
 
         </ul> <!-- /info-list -->
@@ -146,23 +141,27 @@
       <div class="col-six tab-full">
 
         <h3>Skills</h3>
-        <p>I am comfortable working with various programming languages like Java, Python, C++, C language, C#, Javascript.I have experience working with Artificial Intelligence. I am pretty good at Web-Development also. </p>
+        <p>I have demonstarted experience working with various programming languages like Java, Python, C#, Javascript, React Native. I have experience working with Artificial Intelligence. I have working experience with Web and Mobile Development. </p>
 
         <ul class="skill-bars">
           <li>
-            <div class="progress percent80"></div>
+            <div class="progress percent100"></div>
+            <strong>React Native</strong>
+          </li>
+          <li>
+            <div class="progress percent100"></div>
             <strong>Java</strong>
           </li>
           <li>
-            <div class="progress percent85"></div>
+            <div class="progress percent100"></div>
             <strong>Python</strong>
           </li>
           <li>
-            <div class="progress percent80"></div>
+            <div class="progress percent100"></div>
             <strong>.Net</strong>
           </li>
           <li>
-            <div class="progress percent50"></div>
+            <div class="progress percent100"></div>
             <strong>AI</strong>
           </li>
           <li>
@@ -170,19 +169,27 @@
             <strong>HTML</strong>
           </li>
           <li>
-            <div class="progress percent80"></div>
+            <div class="progress percent100"></div>
             <strong>CSS</strong>
           </li>
           <li>
-            <div class="progress percent80"></div>
+            <div class="progress percent100"></div>
             <strong>Javascript</strong>
           </li>
           <li>
-            <div class="progress percent90"></div>
+            <div class="progress percent100"></div>
             <strong>jQuery</strong>
           </li><li>
-            <div class="progress percent90"></div>
+            <div class="progress percent100"></div>
             <strong>React</strong>
+          </li>
+          <li>
+            <div class="progress percent100"></div>
+            <strong>MySQL</strong>
+          </li>
+          <li>
+            <div class="progress percent100"></div>
+            <strong>NoSQL</strong>
           </li>
 
         </ul> <!-- /skill-bars -->
@@ -227,6 +234,22 @@
         <div class="timeline-wrap">
 
           <div class="timeline-block">
+            <div class="timeline-header">
+              <h3>Mobile Developer</h3>
+              </h3>
+              <p>June 2020 - Present</p>
+            </div>
+
+            <div class="timeline-content">
+              <h4>Cellboard Media Inc.</h4>
+              <ul>
+                <li>Working on a reader app for the publishers, for iOS as well as Android.
+                </li>
+                <li>Working with technologies like React Native, Javascript, Expo, Firebase, OAuth for the development.</li>
+                <li>Responsible for making the changes to the app as well as adding new features to the App.</li>
+                <li>Responsible for updating the app both in the play store and app store.</li>
+                </ul>
+            </div>
 
             <div class="timeline-header">
               <h3> Full Stack Developer Intern</h3>
@@ -237,39 +260,26 @@
             <div class="timeline-content">
               <h4>River Sand Technologies</h4>
               <ul>
-                <li>Developed Full-stack web applications using modern web frameworks.</li>
                 <li>Liaised with back-end developers as well as front-end developers as needed.</li>
-                <li>Managed time-sensitive updates, including content changes and database upgrades.</li>
-                <li>Wrote, and debugged web applications and software with complete accuracy.</li>
+                <li>Managed time-sensitive updates, including content changes and database updates.</li>
+                <li>Was responsible for writing as well as debugging the code when needed.</li>
                 </ul>
             </div>
 
             <div class="timeline-header">
               <h3> Cofounder & Full Stack Developer</h3>
               </h3>
-              <p>Jan 2019 - Present</p>
+              <p>Jan 2019 - Jan 2020</p>
             </div>
 
             <div class="timeline-content">
               <h4>Wapply Developers</h4>
               <ul>
                 <li>Average rating 4.95 over 10 projects with great feedback from clients.</li>
-                <li>Develop fully responsive dynamic and static web as well as mobile
+                <li>Developed fully responsive dynamic and static web as well as mobile
                   applications using modern programming languages and frameworks.</li>
-                <li>Generated sales around $10,000 last year.</li>
+                <li>Generated more than $10,000 in revenue working on different projects.</li>
                 </ul>
-            </div>
-
-            <div class="timeline-header">
-              <h3> Online Instructor</h3>
-              </h3>
-              <p>April 2019 - Present</p>
-            </div>
-
-            <div class="timeline-content">
-              <h4>College Students</h4>
-              <p>It is my strong opinion that programming  can change lives of many for better being a highly demanded skill. Hence, I love helping my fellow students and my juniors to understand the challenging concepts of prgramming so that they can score well. In Addition, this also improves my communication skills as well as teaching skills.
-              </p>
             </div>
 
           </div> <!-- /timeline-block -->
@@ -768,7 +778,7 @@
         <h5>Where to find me</h5>
 
         <p>
-          14743 90 Avenue<br>
+          7691 127 Street<br>
           Surrey, British Columbia<br>
           Canada
         </p>
