--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div class="row button-section">
       <div class="col-twelve">
         <a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-        <a href="cv/Sukhbir_Singh.pdf" title="Download CV" class="button button-primary" target="_blank">Download CV</a>
+        <a href="cv/SukhbirSinghResume.pdf" title="Download CV" class="button button-primary" target="_blank">Download CV</a>
       </div>
     </div>
 
@@ -267,13 +267,13 @@
             </div>
 
             <div class="timeline-header">
-              <h3> Cofounder & Full Stack Developer</h3>
+              <h3>Full Stack Developer - Freelance</h3>
               </h3>
               <p>Jan 2019 - Jan 2020</p>
             </div>
 
             <div class="timeline-content">
-              <h4>Wapply Developers</h4>
+              <h4>Fiverr</h4>
               <ul>
                 <li>Average rating 4.95 over 10 projects with great feedback from clients.</li>
                 <li>Developed fully responsive dynamic and static web as well as mobile
